--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  
+  "homepage": "https://github.com/Fsaeidi/routing-project.git"
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -22,7 +22,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-   
+    "predeploy": "npm run build",
+     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -35,6 +36,7 @@
     ]
   },
   "browserslist": {
+    
     "production": [
       ">0.2%",
       "not dead",
@@ -45,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
